--- a/index.html
+++ b/index.html
@@ -2,46 +2,63 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AWS Practitioner</title>
-    <!-- Importando Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Listas de Exercícios</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+   
+    <link rel="stylesheet" href="/script.js">   
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand text-white" href="#">AWS Practitioner</a>
-
-            <!-- Botão do menu hamburguer para mobile -->
-            <button 
-              class="navbar-toggler" 
-              type="button" 
-              data-bs-toggle="collapse" 
-              data-bs-target="#aws-navbar" 
-              aria-controls="aws-navbar" 
-              aria-expanded="false" 
-              aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Itens do menu -->
-            <div class="collapse navbar-collapse" id="aws-navbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Módulos</a>
-                    </li>
+    <div class="container-fluid">
+        <div class="row">
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar">
+                <h4 class="text-danger">ROTA - AWS Practitioner</h4>
+                <ul class="nav flex-column">
+                    <li class="nav-item bg-danger p-2 rounded"><a href="#" class="nav-link text-light">Lista de exercícios</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light">Provas anteriores</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link text-light">Simulados</a></li>
                 </ul>
-            </div>
+            </nav>
+            <main class="col-md-9 col-lg-10 main-content">
+                <div>
+                    <h2>Listas de Exercícios Revisão</h2>
+                    <h4>Exercícios por Matérias</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Introdução ao Cloud Foundation</button>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Introdução à segurança</button>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Introdução à rede</button>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Banco de Dados</button>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Simulados</button>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <button class="btn btn-outline-light w-100" onclick="carregarConteudo(this.textContent)">Provas Antigas</button>
+                    </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-md-6">
+                        <div id="lista-exercicios" class="list-group"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="texto-container" class="p-3 bg-light border rounded" style="white-space: pre-line;">
+                            📢 Selecione um exercício para ver o conteúdo.
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
-    </nav>
-
-    <!-- Bootstrap JS para funcionamento do botão -->
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+ 
 </body>
 </html>
