atualizando pasta e revisao do site

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             
         <div class="row flex-grow-1">
            
-            <nav class="col-md-2 col-lg-2 d-md-block sidebar p-2">
-                <h4 class="text-white mt-4">ROTA - AWS Practitioner</h4>
+            <nav class="col-md-2 col-lg-2 d-md-block sidebar p-4 ">
+                <h4 class="text-white mt-4 p-2">ROTA - AWS Practitioner</h4>
                 <ul class="nav flex-column mt-3">
                     <li class="nav-item bg-danger p-2 rounded">
                         <a href="./index.html" class="nav-link text-light">Início</a>
